Use URI instead URL inside of properties because URL#equals() is broken